# canhaveinternet

./: .gitignore  Cargo.toml  Dockerfile  README.md  influxdb.md  netlify.toml  prometheus.yml
.github/workflows/: docker.yml  rust.yml
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
public/: index.html
snitch-agent/: .env
snitch-agent/src/: main.rs  pizero.md  ubuntu_touch.md
snitch-agent/src/netlify/: mod.rs
snitch/snitch-agent/: Cargo.toml
snitch/snitch-agent/src/: influxdb.md  main.rs
snitch/snitch-agent/src/speedtest/: mod.rs
src/: main.rs
