[package]
name = "snitch-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.137", features = ["derive"] }
serde_json = "1.0.73"
chrono = { version="0.4.19", features = ["serde"] }
actix-web = "4.0.1"
prometheus-client = "0.15.1"