[package]
name = "snitch-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.137", features = ["derive"] }
serde_json = "1.0.73"
chrono = { version="0.4.19", features = ["serde"] }
tokio = { version="1.18.0", features = ["macros", "rt-multi-thread"] }
clap = { version="3.1.14", features = ["derive"] }
# influxdb2 = "0.1.0"
influx_db_client = "0.5.1"
url = "2.2.2"
futures = "0.3.21"
dotenv = "0.15.0"